<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alphasense_description</name>
  <version>0.0.1</version>
  <description>URDF model of the Alphasense Dev Kit</description>

  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  
  <author email="mcamurri@robots.ox.ac.uk">Marco Camurri</author>
  <author email="lintong@robots.ox.ac.uk">Lintong Zhang</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xacro</depend>
  <depend>urdf</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
